tests/files/type_checker_tests/should_fail/195.cmdr
//Should fail import if using something other than string
import 3;
